fix(reactstrap-validation-select): encode q and fix overflow

--- a/packages/reactstrap-validation-select/styles.scss
+++ b/packages/reactstrap-validation-select/styles.scss
@@ -20,3 +20,12 @@
 .av-select .av__placeholder {
   color: #666;
 }
+.av__value-container {
+  max-width: calc(100% - 40px);
+}
+.av__value-container--is-multi.av__value-container--has-value .av__value-container{
+  max-width: calc(100% - 75px);
+}
+.av__value-container > div, .av__input, .av__input > input {
+  max-width: 100%;
+}
